--- a/style.css
+++ b/style.css
@@ -72,12 +72,23 @@ header {
     background: #003329;
     padding: 100px;
 }
+.ab{
+    display: flex;
+    width: 100%;
+    text-align: center;
+}
 .sec h2{
-    font-size: 2.2em;
+    font-size: 30px;
     color: white;
     margin-bottom: 10px;
 }
-
+.ab img{
+    border-radius: 50%;
+}
+.ab img:hover{
+    box-shadow: 0 0 30px white;
+    transition: 0.3s;
+}
 .sec p{
     text-align: justify;
     font-size: 1em;
